--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "mongodb": "^4.11.0",
     "next": "13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
