--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.10.14",
     "bcryptjs": "^2.4.3",
+    "http-proxy-agent": "^5.0.0",
     "jsonwebtoken": "^8.5.1",
+    "lib": "^4.3.3",
     "mongodb": "^4.11.0",
     "next": "13.0.2",
     "next-auth": "^4.16.4",
