--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "nodemailer": "^6.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "browser": {
+    "fs": false,
+    "path": false
   }
 }
