--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   web:
     build: .
     networks:
-      - "next-webapp-network"
+      - "next-syndicate-network"
     ports:
       - "3000:3000"
     depends_on:
@@ -13,11 +13,10 @@ services:
     image: mongo:5.0.14
     restart: always
     networks:
-      - "next-webapp-network"
+      - "next-syndicate-network"
     container_name: mongodb
     ports:
       - "27017:27017"
 
 networks:
-  next-webapp-network:
-    external: true
+  next-syndicate-network:
